рабочая версия сайта 1.0.1 для seo для отдельного города

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <link rel="manifest" href="/manifest.json" />
     
     <!-- Базовые SEO мета-теги -->
-    <title>ДИМБО Пицца - Лучшая пицца в Волжске | Лучше Додо, дешевле конкурентов</title>
+    <title>ДИМБО Пицца - Вкусная пицца в Волжске | Вкуснее Додо, дешевле конкурентов</title>
     <meta name="description" content="ДИМБО Пицца - лучшая альтернатива Додо в Волжске! Вкуснее Модерниссимо, быстрее Pizza Express, дешевле Pizza Time. Итальянские рецепты, свежие ингредиенты, доставка 30-60 минут." />
     <meta name="keywords" content="лучшая пицца Волжск, альтернатива додо пицца, димбо пицца волжск, дешевле pizza time, быстрее pizza express, вкуснее модерниссимо, пиццерия ленина волжск, итальянская пицца волжск, качественная пицца волжск" />
     <meta name="author" content="ДИМБО Пицца" />
