--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
     <meta property="og:title" content="ДИМБО Пицца - Лучшая альтернатива Додо в Волжске" />
     <meta property="og:description" content="Почему ДИМБО лучше конкурентов: вкуснее Модерниссимо, быстрее Pizza Express, дешевле Pizza Time. Итальянские рецепты, свежие ингредиенты." />
     <meta property="og:url" content="https://dimbopizza.ru/" />
-    <meta property="og:site_name" content="ДИМБО Пицца - Лучшая пиццерия Волжска" />
+    <meta property="og:site_name" content="ДИМБО Пицца - Вкуснейшая пиццерия Волжска" />
     <meta property="og:locale" content="ru_RU" />
-    <meta property="og:image" content="https://dimbopizza.ru/images/og-image.jpg" />
+    <meta property="og:image" content="https://dimbopizza.ru/images/logo/dimbopizza512x5127.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:image:alt" content="ДИМБО Пицца - лучше конкурентов в Волжске" />
+    <meta property="og:image:alt" content="ДИМБО Пицца - вкуснее конкурентов в Волжске" />
     
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="ДИМБО Пицца - Доставка пиццы в Волжске" />
     <meta name="twitter:description" content="Заказать горячую пиццу с доставкой по Волжску. Свежие ингредиенты, быстрая доставка 30-60 минут." />
-    <meta name="twitter:image" content="https://dimbopizza.ru/images/twitter-card.jpg" />
+    <meta name="twitter:image" content="https://dimbopizza.ru/images/logo/dimbopizza512x5127.png" />
     
     <!-- Канонический URL -->
     <link rel="canonical" href="https://dimbopizza.ru/" />
